# SpecCrawler

./: README.md  main.py  pyproject.toml  repos.py  repositories.csv
beautiful_soup/: main.py
requests_html/: repositories.csv
