[project]
name = "speccrawler"
version = "0.1.0"
description = "Web Scrapping, for devices!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml-html-clean>=0.4.5",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "requests-html>=0.10.0",
    "scrapy>=2.16.0",
    "selenium>=4.45.0",
]
